2004-01-21  Junichi Uekawa  <dancer@debian.org>

	* NEWS: update news.

	* configure.ac: 0.25.0.cvs.2

	* tests/segv-catcher.sh: passes now.
	TODO: when in ssh, 'exit' does not immediately terminate the process,
	the next input will. This is a bug.

	* dsh.c (run_input_forking_child_processes_process): add error handling and signal handling in
	write.

	* Makefile.am (TESTS): add test segv-catcher.sh

	* tests/segv-catcher.sh: add new to check the assertion failed message.
	dsh: dsh.c:573: do_shell: Assertion `((((__extension__ ({ union { __typeof(childstatus) __in; int __i; } __u; __u.__in = (childstatus); __u.__i; }))) & 0x7f) == 0)' failed.

	* dsh.c (do_shell): exit code 2 if signal received.
	update copyright for 2004

	* dsh.1: update doc.

	* tests/param-i.sh (c): some output

2003-09-18  Junichi Uekawa  <dancer@debian.org>

	* drshd.c: create a file template for the program, not much content included yet.

	* parameter.c (parse_options): sanity checking moved to its own function.
	(sanity_checking): new function for sanity checking of options.

	* configure.ac: 0.25.0.cvs.1

	* parameter.c (parse_options): reword.

2003-09-17  Junichi Uekawa  <dancer@debian.org>

	* NEWS: update.

	* configure.ac: 0.25.0

	* debian/control (Description): update description to 
	explain that this thing has window-limit.

	* dsh.c (execute_rsh_single): check that this routine works;
	waitpid with WAIT_ANY on forklimit.

	* dsh.ja.1: update.

	* dsh.1: reworded.

	* TODO: udpate, connection limit is implemented. remove.

2003-09-16  Junichi Uekawa  <dancer@debian.org>

	* tests/param-F-forklimit.sh: show time.
	modify the test to be apparent.

	* tests/param-F-invalid.sh: fix bug.

	* dsh.c (execute_rsh_single): wait for ANY when wait_shell is not.

	* Makefile.am (TESTS): add the test here.

	* dsh.c (execute_rsh_single): add debug verbose message.

	* tests/param-F-forklimit.sh: new test for visually checking.

	* tests/param-f-fail.sh: fixed a bug in script.
